--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -197,6 +197,14 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a routerLink="/report/anual-audit-yearly" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Annual Audit Status (Yearly)
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="/report/dist-status" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
