--- a/src/app/dashboard/reports/pending-status/pending-status.component.html
+++ b/src/app/dashboard/reports/pending-status/pending-status.component.html
@@ -1,38 +1,103 @@
 <style>
     @media print {
-      #downloadcta, .form-group {
-        visibility: hidden;
-      }
+
+        #downloadcta,
+        .form-group {
+            visibility: hidden;
+        }
     }
-  </style>
-<section class="content p-3">
-    <div class="row">
-        <button id="downloadcta" class="btn btn-success d-flex align-items-center ml-1"
-            onclick="window.print();" style="margin-bottom: 10px; width: 110px;">
-           <i class="fas fa-download mr-1 upload_ico"></i>
-           <span class="now_rap">Download</span>
-       </button>
-        <div class="col-md-12 p-0">
-            <div class="card card-default">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-3 offset-md-9">
-                            <div class="form-group">
-                                <label class="form_label">Filter</label>
-                                <select class="form-control" name="actionfilter" [(ngModel)]="selectedActionFilter"
-                                    (change)='onFilterSelected()'>
-                                    <option value="year">Year</option>
-                                    <option value="month">Month</option>
-                                    <option value="date">Date</option>
-                                    <option value="name">Vendor Name</option>
-                                    <option value="code">Vendor Code</option>
+</style>
+<div class="row">
+    <div class="col-md-12 p-3">
+        <div class="card mb-0">
+            <div class="card-header">
+                <h5 class="card-title"> Search Filter</h5>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="form-group">
+                            <label>Select Vendor</label>
+                            <ng-select [items]="vendorObj" [(ngModel)]="vendorId" class="custom-control custom-select"
+                                [ngModelOptions]="{ standalone: true }" bindLabel="code" bindValue="id"
+                                class="form-control inputbox_css" (search)="searchVendor($event.term)">
+                            </ng-select>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label>Select Year</label>
+                            <div class="input-group">
+                                <select [(ngModel)]="fiscalYearValue" placeholder="Select Month"
+                                    class="custom-control custom-select" [ngModelOptions]="{ standalone: true }">
+                                    <option value="" class="max-width">Select All</option>
+                                    <option [value]="item.id" *ngFor="let item of fiscalYearArr">
+                                        {{
+                                        item.text
+                                        }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
                     </div>
+                    <div class="col-3">
+                        <div class="form-group">
+                            <label>Select Month</label>
+                            <div class="input-group">
+                                <select [(ngModel)]="monthDropDownValue" placeholder="Select Month"
+                                    class="custom-control custom-select" [ngModelOptions]="{ standalone: true }">
+                                    <option value="" class="max-width">Select All</option>
+                                    <option [value]="item.id" *ngFor="let item of monthDropDown">
+                                        {{
+                                        item.name
+                                        }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="form-group">
+                            <label>Select Date <span class="text-danger">*</span></label>
+                            <div class="input-group">
+                                <input type="date" [(ngModel)]="auditDate" class="form-control  filter_css"
+                                    placeholder="Date ">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <button type="button" class="btn btn-primary" (click)="reloadDatawithFilter()">
+                        Apply
+                    </button>
+                    <button type="button" class="btn btn-secondary ml-2" (click)="resetForm()">
+                        Reset
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<section class="content p-3">
+    <div class="row">
+        <button id="downloadcta" class="btn btn-success d-flex align-items-center ml-1" onclick="window.print();"
+            style="margin-bottom: 10px; width: 110px;">
+            <i class="fas fa-download mr-1 upload_ico"></i>
+            <span class="now_rap">Download</span>
+        </button>
+        <div class="col-md-12 p-0">
+            <div class="card card-default">
+                <div class="card-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <canvas baseChart [data]="actionPlanData" height="100%" [type]="'bar'" [options]="actionPlanOptions">
+                            <canvas baseChart [data]="actionPlanData" height="100%" [type]="'bar'"
+                                [options]="actionPlanOptions">
                             </canvas>
                         </div>
                     </div>
