--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -270,6 +270,14 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a routerLink="/report/vendor-summary-year-wise" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Vendor Summary Year Wise
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="/report/clause-wise-score" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
